--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 10px 20px;
-            background: #fff4f4f4;
+            background: #fff4f4;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: sticky;
             top: 0;
@@ -134,6 +134,49 @@
             background: #00d4ff;
             color: #fff;
         }
+
+        /* Menu fixo no canto inferior direito */
+        .fixed-menu {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            z-index: 1000;
+        }
+
+        .fixed-menu a {
+            background: #25d366; /* WhatsApp Green */
+            color: #fff;
+            padding: 15px;
+            border-radius: 50%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            font-size: 30px;
+            text-align: center;
+            transition: all 0.3s;
+        }
+
+        .fixed-menu a.phone {
+            background: #34b7f1; /* Light blue for call */
+        }
+
+        .fixed-menu a:hover {
+            transform: scale(1.1);
+        }
+
+        /* Animação de trepidação */
+        @keyframes shake {
+            0% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            50% { transform: translateX(5px); }
+            75% { transform: translateX(-5px); }
+            100% { transform: translateX(0); }
+        }
+
+        .fixed-menu a {
+            animation: shake 2s ease-in-out infinite 3s;
+        }
     </style>
 </head>
 <body>
@@ -150,6 +193,15 @@
             <li><a href="#quem-somos" onclick="toggleMenu()">Quem Somos</a></li>
             <li><a href="#contato" onclick="toggleMenu()">Contato</a></li>
         </ul>
+        <section id="call-to-action">
+            <div style="padding: 20px; background: #4facfe; color: #fff; text-align: center;">
+                <h2>Solicite um Orçamento Agora</h2>
+                <p>
+                    Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis montados com perfeição.
+                </p>
+                <a href="#contato" class="cta-button">Solicitar Orçamento</a>
+            </div>
+        </section>
     </nav>
 
     <main>
@@ -193,24 +245,77 @@
             </p>
         </div>
     </section>
+    <section id="testimonials" style="padding: 40px; background: #f9f9f9;">
+        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+            <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">O que falam sobre nós</h2>
+            <div style="margin-bottom: 30px;">
+                <p style="font-size: 20px; font-style: italic; color: #555;">
+                    <i class="fas fa-quote-left" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i> 
+                    Contratei os serviços de montagem de móveis para meu escritório e fiquei impressionado com a rapidez e a qualidade do trabalho. Recomendo sem dúvidas!
+                    <i class="fas fa-quote-right" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
+                </p>
+                <div>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                </div>
+                <p style="font-size: 16px; color: #777; margin-top: 10px;">- Maria Silva</p>
+            </div>
+            <div style="margin-bottom: 30px;">
+                <p style="font-size: 20px; font-style: italic; color: #555;">
+                    <i class="fas fa-quote-left" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i> 
+                    Minha cozinha planejada ficou perfeita graças à atenção e ao cuidado da equipe. Serviço excelente!
+                    <i class="fas fa-quote-right" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
+                </p>
+                <div>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star-half-alt" style="color: gold;"></i>
+                </div>
+                <p style="font-size: 16px; color: #777; margin-top: 10px;">- João Pereira</p>
+            </div>
+            <div>
+                <p style="font-size: 20px; font-style: italic; color: #555;">
+                    <i class="fas fa-quote-left" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i> 
+                    Profissionais dedicados e organizados. O armário da minha sala ficou exatamente como eu queria. Muito obrigada!
+                    <i class="fas fa-quote-right" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
+                </p>
+                <div>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                </div>
+                <p style="font-size: 16px; color: #777; margin-top: 10px;">- Ana Oliveira</p>
+            </div>
+        </div>
+    </section>
+    
 
     <footer>
-        <p>&copy; 2024 Antolin & Co. Todos os direitos reservados.</p>
         <div class="social-links">
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://wa.me/55XXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="tel:+55XXXXXXXXX" class="phone"><i class="fas fa-phone-alt"></i></a>
         </div>
+        <p>&copy; 2024 Montagem de Móveis. Todos os direitos reservados.</p>
     </footer>
+
+    <div class="fixed-menu">
+        <a href="https://wa.me/5511937457836" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+        <a href="tel:+5511937457836" class="phone" title="Ligar"><i class="fas fa-phone-alt"></i></a>
+    </div>
 
     <script>
         function toggleMenu() {
-            const menu = document.getElementById('menu');
-            const menuToggle = document.getElementById('menuToggle');
-
+            var menu = document.getElementById('menu');
+            var toggle = document.getElementById('menuToggle');
             menu.classList.toggle('open');
-            menuToggle.classList.toggle('open');
-            menu.setAttribute('aria-hidden', menu.classList.contains('open') ? 'false' : 'true');
+            toggle.classList.toggle('open');
         }
     </script>
 </body>
