--- a/index.html
+++ b/index.html
@@ -245,6 +245,64 @@
             </p>
         </div>
     </section>
+
+    <section id="produtos" style="padding: 40px; background: #f9f9f9;">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <h2 style="text-align: center; color: #333; font-size: 32px; margin-bottom: 20px;">Nossos Produtos</h2>
+            <div class="produtos-lista" style="display: flex; overflow-x: auto; gap: 20px; padding-bottom: 10px;">
+                <!-- Item 1 -->
+                <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="br-11134207-7r98o-lqmchhwceza774.webp" alt="Aparador" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Cabeceira</h3>
+                    <p style="font-size: 14px; color: #777;">Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada 1,40mX45cm</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 41,00 ~ R$ 73,99</p>
+                    <a href="https://shopee.com.br/product/303439692/21128791288" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+                <!-- Item 2 -->
+                <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="guarda-roupa-01.png" alt="Guarda-Roupa" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Guarda-Roupa</h3>
+                    <p style="font-size: 14px; color: #777;">Organize seu espaço com estilo e praticidade.</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 200,00</p>
+                    <a href="https://example.com/comprar-guarda-roupa" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+                <!-- Item 3 -->
+                <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="armario-cozinha-bege.png" alt="Armário de Cozinha" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Armário de Cozinha</h3>
+                    <p style="font-size: 14px; color: #777;">Transforme sua cozinha com montagem profissional.</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 180,00</p>
+                    <a href="https://example.com/comprar-armario-cozinha" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+                 <!-- Item 1 -->
+                 <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="br-11134207-7r98o-lqmchhwceza774.webp" alt="Aparador" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Cabeceira</h3>
+                    <p style="font-size: 14px; color: #777;">Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada 1,40mX45cm</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 41,00 ~ R$ 73,99</p>
+                    <a href="https://shopee.com.br/product/303439692/21128791288" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+                <!-- Item 2 -->
+                <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="guarda-roupa-01.png" alt="Guarda-Roupa" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Guarda-Roupa</h3>
+                    <p style="font-size: 14px; color: #777;">Organize seu espaço com estilo e praticidade.</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 200,00</p>
+                    <a href="https://example.com/comprar-guarda-roupa" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+                <!-- Item 3 -->
+                <div class="produto-item" style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
+                    <img src="armario-cozinha-bege.png" alt="Armário de Cozinha" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
+                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Armário de Cozinha</h3>
+                    <p style="font-size: 14px; color: #777;">Transforme sua cozinha com montagem profissional.</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 180,00</p>
+                    <a href="https://example.com/comprar-armario-cozinha" target="_blank" style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
     <section id="testimonials" style="padding: 40px; background: #f9f9f9;">
         <div style="max-width: 800px; margin: 0 auto; text-align: center;">
             <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">O que falam sobre nós</h2>
@@ -295,8 +353,7 @@
             </div>
         </div>
     </section>
-    
-
+  
     <footer>
         <div class="social-links">
             <a href="https://wa.me/55XXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
