--- a/index.html
+++ b/index.html
@@ -16,19 +16,29 @@
         }
 
         header {
+            padding: 8px;
             display: flex;
             align-items: center;
-            justify-content: space-around;
-            padding: 10px 20px;
-            background: #fff4f4;
+            justify-content: space-between;
+            background: #f4fffb;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: sticky;
             top: 0;
             z-index: 1000;
         }
 
+        header a {
+            text-decoration: none;
+            background-color: #ccf7ff;
+            color: white;
+            font-weight: bolder;
+            padding: 5px;
+            margin: 4px;
+            border-radius: 6px;
+        }
+
         .menu-toggle {
-            font-size: 24px;
+            font-size: 30px;
             cursor: pointer;
             color: #4facfe;
             transition: transform 0.3s ease-in-out;
@@ -37,10 +47,12 @@
         .menu-toggle.open {
             transform: rotate(45deg);
         }
+
         h1 {
             padding: 0;
             margin: 0;
         }
+
         .menu {
             position: fixed;
             top: 0;
@@ -116,7 +128,7 @@
             }
 
             100% {
-                transform: translateX(110%);
+                transform: translateX(0%);
             }
         }
 
@@ -173,7 +185,7 @@
             padding: 15px;
             border-radius: 50%;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            font-size: 30px;
+            font-size: 25px;
             text-align: center;
             transition: all 0.3s;
         }
@@ -217,8 +229,9 @@
         /* Section styles */
         .animated-section {
             position: relative;
+            background-color: transparent;
             width: 100%;
-            height: 10vh;
+            height: 6vh;
             /* Ajuste conforme necessário */
             display: flex;
             justify-content: center;
@@ -228,13 +241,17 @@
 
         /* Animated text */
         .animated-text {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 3rem;
+            font-family: 'Arial', sans-serif;
+            font-size: 12px;
+            letter-spacing: 2px;
             font-weight: bold;
-            color: #f1faee;
+            color: #ffffff;
             position: absolute;
             white-space: nowrap;
-            animation: slideInOut 5s linear infinite;
+            border-radius: 10px;
+            padding: 4px;
+            text-transform: uppercase;
+            animation: slideInOut 6s ease-in-out infinite;
         }
 
 
@@ -247,11 +264,13 @@
 
             10% {
                 transform: translateX(0);
+
                 opacity: 1;
             }
 
             90% {
                 transform: translateX(0);
+
                 opacity: 1;
             }
 
@@ -266,9 +285,8 @@
 <body>
     <header>
         <div class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</div>
-        <section class="animated-section">
-            <h1 class="animated-text"><img style="width: 200px;" src="Gemini_Generated_Image_us627sus627sus62.jpg" alt=""></h1>
-        </section>
+
+        <img style="width: 200px;" src="Gemini_Generated_Image_us627sus627sus62.jpg" alt="">
     </header>
 
 
@@ -289,7 +307,7 @@
                     Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
                     montados com perfeição.
                 </p>
-                <a href="#contato" class="cta-button">Solicitar Orçamento</a>
+                <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
             </div>
         </section>
 
@@ -304,6 +322,17 @@
                 <img src="armario-cozinha-bege.png" alt="Imagem 3">
                 <img src="cama-crianca.png" alt="Imagem 4">
                 <img src="rack.png" alt="Imagem 5">
+                <img src="aparador.png" alt="Imagem 1">
+                <img src="guarda-roupa-01.png" alt="Imagem 2">
+                <img src="armario-cozinha-bege.png" alt="Imagem 3">
+                <img src="cama-crianca.png" alt="Imagem 4">
+                <img src="rack.png" alt="Imagem 5">
+                <img src="aparador.png" alt="Imagem 1">
+                <img src="guarda-roupa-01.png" alt="Imagem 2">
+                <img src="armario-cozinha-bege.png" alt="Imagem 3">
+                <img src="cama-crianca.png" alt="Imagem 4">
+                <img src="rack.png" alt="Imagem 5">
+
             </div>
         </div>
     </main>
@@ -319,6 +348,10 @@
         </div>
     </section>
 
+    <section class="animated-section">
+        <h1 class="animated-text">montamos seu móvel contate-nos agora!</h1>
+    </section>
+
     <section id="call-to-action">
         <div style="padding: 20px; background: #4facfe; color: #fff; text-align: center;">
             <h2>Solicite um Orçamento Agora</h2>
@@ -326,25 +359,14 @@
                 Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
                 montados com perfeição.
             </p>
-            <a href="#contato" class="cta-button">Solicitar Orçamento</a>
-        </div>
-    </section>
+            <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
 
-    <section id="quem-somos" style="padding: 40px; background: #f4f4f4;">
-        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-            <h2>Quem Somos</h2>
-            <p>
-                Somos uma empresa especializada na montagem de móveis, comprometida em oferecer soluções práticas e de
-                alta qualidade.
-                Nossa equipe é composta por profissionais altamente qualificados e experientes, apaixonados por
-                transformar projetos em realidade.
-            </p>
         </div>
     </section>
 
     <section id="produtos" style="padding: 40px; background: #f9f9f9;">
         <div style="max-width: 1200px; margin: 0 auto;">
-            <h2 style="text-align: center; color: #333; font-size: 32px; margin-bottom: 20px;">Nossos Produtos</h2>
+            <h2 style="text-align: center; color: #333; font-size: 32px; margin-bottom: 20px;">Produtos</h2>
             <div class="produtos-lista" style="display: flex; overflow-x: auto; gap: 20px; padding-bottom: 10px;">
                 <!-- Item 1 -->
                 <div class="produto-item"
@@ -366,59 +388,25 @@
                     <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Mesa de cabeceira</h3>
                     <p style="font-size: 14px; color: #777;">Mesa de Cabeceira Nicho Quarto Casal Decoração Retro Palma
                         Branco</p>
-                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 49,90 ~ R$ 37,90</p>
+                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 37,90 ~ R$ 49,90</p>
                     <a href="https://s.shopee.com.br/5prSZPdKcA?share_channel_code=1" target="_blank"
-                        style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
-                </div>
-                <!-- Item 3 -->
-                <div class="produto-item"
-                    style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
-                    <img src="armario-cozinha-bege.png" alt="Armário de Cozinha"
-                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
-                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Armário de Cozinha</h3>
-                    <p style="font-size: 14px; color: #777;">Transforme sua cozinha com montagem profissional.</p>
-                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 180,00</p>
-                    <a href="https://example.com/comprar-armario-cozinha" target="_blank"
-                        style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
-                </div>
-                <!-- Item 1 -->
-                <div class="produto-item"
-                    style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
-                    <img src="br-11134207-7r98o-lqmchhwceza774.webp" alt="Aparador"
-                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
-                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Cabeceira</h3>
-                    <p style="font-size: 14px; color: #777;">Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada
-                        1,40mX45cm</p>
-                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 41,00 ~ R$ 73,99</p>
-                    <a href="https://shopee.com.br/product/303439692/21128791288" target="_blank"
-                        style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
-                </div>
-                <!-- Item 2 -->
-                <div class="produto-item"
-                    style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
-                    <img src="guarda-roupa-01.png" alt="Guarda-Roupa"
-                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
-                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Guarda-Roupa</h3>
-                    <p style="font-size: 14px; color: #777;">Organize seu espaço com estilo e praticidade.</p>
-                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 200,00</p>
-                    <a href="https://example.com/comprar-guarda-roupa" target="_blank"
-                        style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
-                </div>
-                <!-- Item 3 -->
-                <div class="produto-item"
-                    style="flex: 0 0 auto; width: 250px; border: 1px solid #ddd; border-radius: 8px; background: #fff; text-align: center; padding: 15px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); transition: background 0.3s ease;">
-                    <img src="armario-cozinha-bege.png" alt="Armário de Cozinha"
-                        style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; transition: transform 0.3s ease;">
-                    <h3 style="font-size: 20px; color: #333; margin: 10px 0;">Armário de Cozinha</h3>
-                    <p style="font-size: 14px; color: #777;">Transforme sua cozinha com montagem profissional.</p>
-                    <p style="font-size: 18px; font-weight: bold; color: #4facfe;">R$ 180,00</p>
-                    <a href="https://example.com/comprar-armario-cozinha" target="_blank"
                         style="display: inline-block; padding: 10px 20px; background: #4facfe; color: #fff; text-decoration: none; border-radius: 5px; margin-top: 10px; font-weight: bold; transition: background 0.3s;">Loja</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <section id="quem-somos" style="padding: 40px; background: #f4f4f4;">
+        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+            <h2>Quem Somos</h2>
+            <p>
+                Somos uma empresa especializada na montagem de móveis, comprometida em oferecer soluções práticas e de
+                alta qualidade.
+                Nossa equipe é composta por profissionais altamente qualificados e experientes, apaixonados por
+                transformar projetos em realidade.
+            </p>
+        </div>
+    </section>
 
     <section id="testimonials" style="padding: 40px; background: #f9f9f9;">
         <div style="max-width: 800px; margin: 0 auto; text-align: center;">
@@ -475,13 +463,15 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://wa.me/55XXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
-            <a href="tel:+55XXXXXXXXX" class="phone"><i class="fas fa-phone-alt"></i></a>
+            <a href="https://wa.me/5511937457836" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="tel:+5511937457836" class="phone"><i class="fas fa-phone-alt"></i></a>
         </div>
         <p>&copy; 2024 Montagem de Móveis. Todos os direitos reservados.</p>
     </footer>
 
     <div class="fixed-menu">
+        <a href="#produtos"><i class="fas fa-shopping-cart"></i>
+        </a>
         <a href="https://wa.me/5511937457836" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         <a href="tel:+5511937457836" class="phone" title="Ligar"><i class="fas fa-phone-alt"></i></a>
     </div>
