--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     
-    <header>
+    <header id="inicio">
         <div class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</div>
 
         <img style="width: 220px;" src="assets/Imagens/Gemini_Generated_Image_us627sus627sus62.jpg" alt="">
@@ -20,10 +20,10 @@
     <nav class="menu" id="menu" aria-hidden="true">
         <button onclick="toggleMenu()">X</button>
         <ul>
-            <li><a href="#home" onclick="toggleMenu()">Página Principal</a></li>
             <li><a href="#sobre" onclick="toggleMenu()">Sobre</a></li>
             <li><a href="#quem-somos" onclick="toggleMenu()">Quem Somos</a></li>
-            <li><a href="#contato" onclick="toggleMenu()">Contato</a></li>
+            <li><a href="#produtos" onclick="toggleMenu()">Produtos</a></li>
+            <li><a href="politica-privacidade.html">Política de privacidade</a></li>
         </ul>
         <section id="call-to-action">
             <div style="padding: 20px; background: #4facfe; color: #fff; text-align: center;">
@@ -248,8 +248,10 @@
         </div>
     </section>
 
+    
+
     <footer>
-        <div class="social-links">
+        <div class="social-links" id="contatoss">
             <a href="https://wa.me/5511937457836" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a href="tel:+5511937457836" class="phone"><i class="fas fa-phone-alt"></i></a>
         </div>
