--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
   gtag('config', 'AW-11418191819');
 </script>
+    <!-- Event snippet for Compra (1) conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-11418191819/C-OXCMnjrPwYEMuPz8Qq',
+      'transaction_id': ''
+  });
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montador de Móveis</title>
