--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -3,6 +3,26 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Política de Privacidade</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11418191819">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-11418191819');
+    </script>
+    
+        <!-- Event snippet for Compra (1) conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-11418191819/C-OXCMnjrPwYEMuPz8Qq',
+          'transaction_id': ''
+      });
+    </script>
+
 <style>
     body {
         font-family: 'Roboto', Arial, sans-serif;
@@ -69,7 +89,7 @@
 <body>
   
     <div class="container">
-        <a href="index.html" style="position: fixed; background-color: #0000004d; padding: 10px; border-radius: 100px">X</a>
+        <a href="index.html" style="position: fixed; background-color: #0000004d; padding: 10px; border-radius: 100px; text-decoration: none; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: 900;">X</a>
         <h1>Política de Privacidade</h1>
 
         <h2>1. Introdução</h2>
