--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <ul>
             <li><a href="#sobre" onclick="toggleMenu()">Sobre</a></li>
             <li><a href="#produtos" onclick="toggleMenu()">Produtos</a></li>
+            <a href="excelentes.html">Excelentes</a>
             <li><a href="#quem-somos" onclick="toggleMenu()">Quem Somos</a></li>
             <li><a href="#contatoss" onclick="toggleMenu()">Acessar Mapa</a></li>
             <li><a href="areas-de-atuacao.html" onclick="toggleMenu()">Áreas de Atuação</a></li>
