--- a/excelentes.html
+++ b/excelentes.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="assets/imagens/logo.png" alt="">
+        <img src="assets-excelentes/imagens/logo.png" alt="">
         <nav class="scroll-list-container">
             <a href="#pizzas-simples">Pizzas simples</a>
             <a href="#pizzas-tradicionais">Pizzas tradicionais</a>
@@ -43,7 +43,7 @@
                 <div class="items">
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Mussarela</h3>
                             <p>Musarrela, tomate e azeitona.</p>
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa fatiada, cebola e azeitona.</p>
@@ -63,7 +63,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Brigadeiro</h3>
                             <p>Brigadeiro, granulado e leite condensado.</p>
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Mussarela</h3>
                             <p>Musarrela, tomate e azeitona.</p>
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa fatiada, cebola e azeitona.</p>
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Brigadeiro</h3>
                             <p>Brigadeiro, granulado e leite condensado.</p>
@@ -103,7 +103,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Mussarela</h3>
                             <p>Musarrela, tomate e azeitona.</p>
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa fatiada, cebola e azeitona.</p>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Brigadeiro</h3>
                             <p>Brigadeiro, granulado e leite condensado.</p>
@@ -142,7 +142,7 @@
                 <div class="items">
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Mussarela</h3>
                             <p>Musarrela, tomate e azeitona.</p>
@@ -152,7 +152,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa fatiada, cebola e azeitona.</p>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Brigadeiro</h3>
                             <p>Brigadeiro, granulado e leite condensado.</p>
@@ -180,7 +180,7 @@
                 <div class="items">
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/pizza-mussarela.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Mussarela</h3>
                             <p>Musarrela, tomate e azeitona.</p>
@@ -190,7 +190,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-calabresa.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa fatiada, cebola e azeitona.</p>
@@ -200,7 +200,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
+                        <img src="assets-excelentes/imagens/pizza-brigadeiro.png" alt="Pizza de Queijo">
                         <div class="item-details">
                             <h3>Brigadeiro</h3>
                             <p>Brigadeiro, granulado e leite condensado.</p>
@@ -218,7 +218,7 @@
                 <div class="items">
 
                     <div class="item">
-                        <img src="assets/imagens/esfiha-calabresa.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/esfiha-calabresa.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Calabresa</h3>
                             <p>Calabresa, cebola e temperos.</p>
@@ -228,7 +228,7 @@
                     </div>
 
                     <div class="item">
-                        <img src="assets/imagens/esfiha-frango-tomate.png" alt="Pizza de Calabresa">
+                        <img src="assets-excelentes/imagens/esfiha-frango-tomate.png" alt="Pizza de Calabresa">
                         <div class="item-details">
                             <h3>Frango</h3>
                             <p>Calabresa, cebola e temperos.</p>
