--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montador de Móveis</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-      
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11418191819">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11418191819">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-11418191819');
-</script>
+        gtag('config', 'AW-11418191819');
+    </script>
 
     <!-- Event snippet for Compra (1) conversion page -->
-<script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-11418191819/C-OXCMnjrPwYEMuPz8Qq',
-      'transaction_id': ''
-  });
-</script>
+    <script>
+        gtag('event', 'conversion', {
+            'send_to': 'AW-11418191819/C-OXCMnjrPwYEMuPz8Qq',
+            'transaction_id': ''
+        });
+    </script>
 </head>
 
 <body>
     <section style="height: 22px;" class="animated-section">
-        <h1 class="animated-text"><strong style="color: rgb(255, 255, 255);">Desconto 10% OFF somente hoje!</strong></h1>
+        <h1 class="animated-text"><strong style="color: rgb(255, 255, 255);">Aproveite e faça seu Orçamento</strong>
+        </h1>
     </section>
     <header id="inicio">
         <div class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</div>
@@ -43,9 +43,7 @@
         <ul>
             <li><a href="#sobre" onclick="toggleMenu()">Sobre</a></li>
             <li><a href="#produtos" onclick="toggleMenu()">Produtos</a></li>
-            <a href="excelentes.html">Excelentes</a>
             <li><a href="#quem-somos" onclick="toggleMenu()">Quem Somos</a></li>
-            <li><a href="#contatoss" onclick="toggleMenu()">Acessar Mapa</a></li>
             <li><a href="areas-de-atuacao.html" onclick="toggleMenu()">Áreas de Atuação</a></li>
             <li><a href="politica-privacidade.html" onclick="toggleMenu()">Política de Privacidade</a></li>
         </ul>
@@ -117,14 +115,47 @@
         <div class="texto-imagem">Transforme sua casa com móveis montados na hora!</div>
     </section>
 
+    <section id="quem-somos" style="padding: 40px; background: #f4f4f4;">
+        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+            <h2>Quem Somos</h2>
+            <p>
+                Somos uma empresa especializada na montagem de móveis, comprometida em oferecer soluções práticas e de
+                alta qualidade.
+                Nossa equipe é composta por profissionais altamente qualificados e experientes, apaixonados por
+                transformar projetos em realidade.
+            </p>
+        </div>
+    </section>
+
     <section id="produtos">
 
         <div class="produtoss">
             <h2>Produtos</h2>
 
+            <div class="midia-video-text-description" style=" display: flex; align-items: center; gap: 20px;">
+                <video width="50%" height="300px" autoplay muted loop
+                    style="border-radius: 15px; overflow: hidden; object-fit: cover;">
+                    <source src="assets/midia/br-11110105-6kfks-lqmd07ytn9xf9c.16000081705519518.mp4" type="video/mp4">
+                </video>
+                <div style="text-align: center;">
+                    <h3>Cabeceira</h3>
+                    <p class="descricao-produto-item" style="display: flex; flex-direction: column;">
+                        Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada 1,40mX45cm
+                    </p>
+                </div>
+            </div>
+            <div class="arrow-container">
+                <i class="fa-solid fa-angle-left arrow-indicator"></i>
+                <i class="fa-solid fa-angle-left arrow-indicator"></i>
+                <i class="fa-solid fa-angle-left arrow-indicator"></i>
+                <p> LISTA PRODUTOS </p>
+                <i class="fa-solid fa-angle-right arrow-indicator"></i>
+                <i class="fa-solid fa-angle-right arrow-indicator"></i>
+                <i class="fa-solid fa-angle-right arrow-indicator"></i>
+            </div>
             <div class="produtos-lista">
+                
                 <!-- Cabeceira -->
-
                 <div class="produto-item">
 
                     <img src="assets/Imagens/br-11134207-7r98o-lqmchhwceza774.webp" alt="Aparador">
@@ -192,37 +223,26 @@
 
     </section>
 
-    <section id="quem-somos" style="padding: 40px; background: #f4f4f4;">
-        <div style="max-width: 800px; margin: 0 auto; text-align: center;">
-            <h2>Quem Somos</h2>
-            <p>
-                Somos uma empresa especializada na montagem de móveis, comprometida em oferecer soluções práticas e de
-                alta qualidade.
-                Nossa equipe é composta por profissionais altamente qualificados e experientes, apaixonados por
-                transformar projetos em realidade.
-            </p>
-        </div>
-    </section>
-
-    <section class="animated-section">
-        <h1 class="animated-text">montamos seu móvel contate-nos agora!</h1>
-    </section>
-
-    <section id="call-to-action">
-        <div style="padding: 20px; background: #4facfe; color: #fff; text-align: center;">
-            <h2>Solicite um Orçamento Agora</h2>
-            <p>
-                Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
-                montados com perfeição.
-            </p>
-            <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
-
-        </div>
-    </section>
-
-    <section id="testimonials" style="padding: 40px; background: #f9f9f9;">
+    <section id="testimonials">
         <div style="max-width: 800px; margin: 0 auto; text-align: center;">
             <h2 style="font-size: 32px; color: #333; margin-bottom: 20px;">O que falam sobre nós</h2>
+
+            <div style="margin-bottom: 30px;">
+                <img src="assets/Imagens/IMG_20241204_184316_178.jpg" alt="">
+                <p style="font-size: 20px; font-style: italic; color: #555;">
+                    <i class="fas fa-quote-left" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
+                    Meu pai adorou a cômoda, ficou perfeita! Ótimos profissionais e excelente serviço.
+                    <i class="fas fa-quote-right" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
+                </p>
+                <div>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                    <i class="fas fa-star" style="color: gold;"></i>
+                </div>
+                <p style="font-size: 16px; color: #777; margin-top: 10px;">- Helena Schimdt</p>
+            </div>
             <div style="margin-bottom: 30px;">
                 <p style="font-size: 20px; font-style: italic; color: #555;">
                     <i class="fas fa-quote-left" style="color: #4facfe; font-size: 30px; vertical-align: middle;"></i>
@@ -271,11 +291,26 @@
                 <p style="font-size: 16px; color: #777; margin-top: 10px;">- Ana Oliveira</p>
             </div>
         </div>
+
+    </section>
+
+    <section class="animated-section">
+        <h1 class="animated-text">montamos seu móvel contate-nos agora!</h1>
+    </section>
+
+    <section id="call-to-action">
+        <div style="padding: 20px; background: #4facfe; color: #fff; text-align: center;">
+            <h2>Solicite um Orçamento Agora</h2>
+            <p>
+                Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
+                montados com perfeição.
+            </p>
+            <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
+
+        </div>
     </section>
 
     <footer>
-        <h4>Atendemos região de Embu-Guaçu e regiões com raio de 30km de distância<a style="color: rgb(0, 47, 140);" href="areas-de-atuacao.html"> áreas de atuação</a> para demais regiões nos mande mensagem pelo WhatsApp <a href="https://wa.me/5511937457836" target="_blank"><i class="fab fa-whatsapp"></i></a> ou ligue <a href="tel:+5511937457836" class="phone"><i class="fas fa-phone-alt"></i></a> para mais detalhes.</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116768.97284090951!2d-46.91811418466244!3d-23.853054184501087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cfb525924bc4bf%3A0x9d3e2907cfe36d11!2sEmbu-Gua%C3%A7u%2C%20SP%2C%2006900-000!5e0!3m2!1spt-BR!2sbr!4v1733975892552!5m2!1spt-BR!2sbr" width="100%" height="450" style=" border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>&copy; 2024 Antolin & Co. Todos os direitos reservados.</p>
     </footer>
 
