--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -139,7 +139,7 @@
 
         <h2>8. Contato</h2>
         <p>Se tiver dúvidas sobre esta política, entre em contato pelo e-mail <a
-                href="mailto:antolincompany@gmail.com">antolincompany@gmail.com</a>.</p>
+                href="mailto:antolincompany@gmail.com">antolincompany@gmail.com</a></p>
 
     </div>
     
