--- a/index.html
+++ b/index.html
@@ -329,6 +329,10 @@
             toggle.classList.toggle('open');
         }
     </script>
+                <script>
+  window.history.pushState({}, document.title, window.location.pathname);
+    </script>
+
 
 </body>
 
