--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
                     montados com perfeição.
                 </p>
-                <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
+                <a href="formulario-de-servico.html" class="cta-button">Solicitar Orçamento</a>
             </div>
         </section>
 
@@ -105,7 +105,7 @@
                 Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
                 montados com perfeição.
             </p>
-            <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
+            <a href="formulario-de-servico.html" class="cta-button">Solicitar Orçamento</a>
 
         </div>
     </section>
@@ -127,100 +127,17 @@
         </div>
     </section>
 
-    <section id="produtos">
-
-        <div class="produtoss">
-            <h2>Produtos</h2>
-
-            <div class="midia-video-text-description" style=" display: flex; align-items: center; gap: 20px;">
-                <video width="50%" height="300px" autoplay muted loop
-                    style="border-radius: 15px; overflow: hidden; object-fit: cover;">
-                    <source src="assets/midia/br-11110105-6kfks-lqmd07ytn9xf9c.16000081705519518.mp4" type="video/mp4">
-                </video>
-                <div style="text-align: center;">
-                    <h3>Cabeceira</h3>
-                    <p class="descricao-produto-item" style="display: flex; flex-direction: column;">
-                        Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada 1,40mX45cm
-                    </p>
-                </div>
-            </div>
-            <div class="arrow-container">
-                <i class="fa-solid fa-angle-left arrow-indicator"></i>
-                <i class="fa-solid fa-angle-left arrow-indicator"></i>
-                <i class="fa-solid fa-angle-left arrow-indicator"></i>
-                <p> LISTA PRODUTOS </p>
-                <i class="fa-solid fa-angle-right arrow-indicator"></i>
-                <i class="fa-solid fa-angle-right arrow-indicator"></i>
-                <i class="fa-solid fa-angle-right arrow-indicator"></i>
-            </div>
-            <div class="produtos-lista">
-                
-                <!-- Cabeceira -->
-                <div class="produto-item">
-
-                    <img src="assets/Imagens/br-11134207-7r98o-lqmchhwceza774.webp" alt="Aparador">
-
-                    <h3>Cabeceira</h3>
-
-                    <p class="descricao-produto-item">Kit 7 Cabeceiras de Cama Box Casal Estofada Modulada 1,40mX45cm
-                    </p>
-
-                    <a href="https://shopee.com.br/product/303439692/21128791288" target="_blank">Acessar loja</a>
-
-                </div>
-
-                <!-- Aparador -->
-                <div class="produto-item">
-
-                    <img src="assets/Imagens/image.png" alt="">
-
-                    <h3>Aparador</h3>
-
-                    <p class="descricao-produto-item">Aparador Buffet Multiuso Retrô Cantinho do Café Bali</p>
-
-                    <a href="https://s.shopee.com.br/AUdQGYFuut" target="_blank">Acessar loja</a>
-
-                </div>
-
-                <!-- Escrivaninha -->
-                <div class="produto-item">
-
-                    <img src="assets/Imagens/sg-11134201-7rd43-lun725hb8yxg6b.webp" alt="">
-
-                    <h3>Escrivaninha</h3>
-
-                    <p class="descricao-produto-item">Kit 2 Peças Escrivaninha com Estante Guaili Yescasai</p>
-
-                    <a href="https://s.shopee.com.br/2qDz8WDEtV" target="_blank">Acessar loja</a>
-
-                </div>
-
-                <!-- Mesa office -->
-                <div class="produto-item">
-
-                    <img src="assets/Imagens/mesa-office.webp" alt="">
-
-                    <h3>Mesa office</h3>
-
-                    <p class="descricao-produto-item">Mesa Office com estante lateral Multimóveis Branco/Lacca Fume</p>
-
-                    <a href="https://s.shopee.com.br/7AMyIYq7JH" target="_blank">Acessar loja</a>
-
-                </div>
-
-                <!-- Mesa com gaveta -->
-                <div class="produto-item">
-
-                    <img src="assets/Imagens/mesa-com-gaveta.webp" alt="">
-
-                    <h3>Mesa com gaveta</h3>
-
-                    <p class="descricao-produto-item">Mesa Com Gaveta Deslizante Para Maquiagem e Notebook</p>
-
-                    <a href="https://s.shopee.com.br/6fQhhhYWxz" target="_blank">Acessar loja</a>
-
-                </div>
-
+    <section class="carrossel">
+        <h3 style="margin: 0; padding-top: 5px; color: white; text-align: center; text-transform: uppercase;">Galeria</h3>
+        <div class="slides-container">
+            <div class="slide"><img src="assets/Imagens/montagem-guarda-roupa-mdf02.jpg" alt="Aparador de sala de jantar em madeira"></div>
+            <div class="slide"><img src="assets/Imagens/montagem-guarda-roupa-mdf03.jpg" alt="Aparador de sala de jantar em madeira"></div>
+        </div>
+        <div class="dots-container">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
     </section>
 
     <section id="testimonials">
@@ -305,7 +222,7 @@
                 Entre em contato conosco e descubra como podemos ajudar você a transformar seus espaços com móveis
                 montados com perfeição.
             </p>
-            <a href="https://wa.me/5511937457836" class="cta-button">Solicitar Orçamento</a>
+            <a href="formulario-de-servico.html" class="cta-button">Solicitar Orçamento</a>
 
         </div>
     </section>
@@ -315,9 +232,7 @@
     </footer>
 
     <div class="fixed-menu">
-        <a href="#produtos"><i class="fas fa-shopping-cart"></i>
-        </a>
-        <a href="https://wa.me/5511937457836" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+        <a href="formulario-de-servico.html" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         <a href="tel:+5511937457836" class="phone" title="Ligar"><i class="fas fa-phone-alt"></i></a>
     </div>
 
@@ -328,11 +243,32 @@
             menu.classList.toggle('open');
             toggle.classList.toggle('open');
         }
-    </script>
-                <script>
-  window.history.pushState({}, document.title, window.location.pathname);
-    </script>
 
+        let currentIndex = 0;
+        const slides = document.querySelectorAll('.slide');
+        const dots = document.querySelectorAll('.dot');
+
+        function moveToNextSlide() {
+            currentIndex = (currentIndex + 1) % slides.length;
+            updateCarrossel();
+        }
+
+        function updateCarrossel() {
+            const offset = -currentIndex * 100;
+            document.querySelector('.slides-container').style.transform = `translateX(${offset}%)`;
+            dots.forEach(dot => dot.classList.remove('active'));
+            dots[currentIndex].classList.add('active');
+        }
+
+        dots.forEach((dot, index) => {
+            dot.addEventListener('click', () => {
+                currentIndex = index;
+                updateCarrossel();
+            });
+        });
+
+        setInterval(moveToNextSlide, 4000);
+    </script>
 
 </body>
 
