--- a/formulario-de-servico.html
+++ b/formulario-de-servico.html
@@ -122,6 +122,13 @@
             border-radius: 5px;
             outline: none;
         }
+            .explanation {
+            width: 90%;
+            font-size: 12px;
+            color: #555555;
+            margin-top: 5px;
+        
+        }
         }
     </style>
 </head>
